# AIKernel.Tools

./: .gitignore  AIKernel.Tools.slnx  Directory.Build.props  LICENSE  NuGet.config  README-ja.md  README.md  RELEASE_NOTES-ja.md  RELEASE_NOTES.md
.github/workflows/: publish-pypi.yml
capabilities/AIKernel.Tools.Capability.ChatOpenAI/: ChatOpenAICapabilityContracts.cs  ChatOpenAICapabilityDescriptor.cs  docs.en.xml  docs.ja.xml
capabilities/AIKernel.Tools.Capability.CudaCompute/: CudaComputeCapabilityContracts.cs  CudaComputeCapabilityDescriptor.cs  docs.en.xml  docs.ja.xml
capabilities/AIKernel.Tools.Capability.DynamicPipelineCompiler/: DynamicPipelineCompilerCapabilityContracts.cs  DynamicPipelineCompilerCapabilityDescriptor.cs  docs.en.xml  docs.ja.xml
capabilities/AIKernel.Tools.Capability.LocalLLM/: AIKernel.Tools.Capability.LocalLLM.csproj  LocalLLMCapabilityContracts.cs  LocalLLMCapabilityDescriptor.cs  docs.en.xml  docs.ja.xml
capabilities/AIKernel.Tools.Capability.RomStorage/: RomStorageCapabilityContracts.cs  RomStorageCapabilityDescriptor.cs  docs.ja.xml
capabilities/AIKernel.Tools.Capability.VfsGit/: VfsGitCapabilityContracts.cs  VfsGitCapabilityDescriptor.cs  docs.en.xml  docs.ja.xml
cli/AIKernel.CLI/: AIKernel.CLI.csproj  Program.cs  docs.ja.xml
docs/: README-ja.md  README.md
python/: README-ja.md  README.md  pyproject.toml
python/src/aikernel_tools/: __init__.py
python/src/aikernel_tools/native/: __init__.py
python/src/aikernel_tools/tools/: __init__.py  capabilities.py  formatter.py  inspector.py  managed.py  replay.py  session.py
python/tests/: test_tools_contract.py
(+122 files in other folders)
